# Unity.work_services

./: .gitignore  README.md  global_requirements.txt  pyproject.toml  start.py
Binance_Connector/: hist_trade.py  main.py  utilites.py
Binance_Connector/log/: logger.py
Bondash_signals/: ID инструментов (2).xlsx  ID инструментов.xlsx  data.json  main.py  text.txt  zapros_api.ipynb
Count_statistics_bot/: button.py  bybit_balnce.py  helper.ipynb  new_sql_qwer_Percev.py  wallet_balance.db
Count_statistics_bot/Fin report fo boss/: fin_report_main.py
Manger bot for MT5/: dop_files.py
Manger bot for MT5/query_new/Балансы и эквити 2 запроса нео эктив/Active/: Active эквити.txt
Manger bot for MT5/query_new/Балансы и эквити 2 запроса нео эктив/НЕО/: НЕО Балансы.txt  НЕО Эквити.txt
Manger bot for MT5/query_new/ПНЛ показатели нео эктив/Active/: Active АБУК часть_old.txt
Manger bot for MT5/query_new/ПНЛ показатели нео эктив/NEO/: NEO АБУК + ББУК часть без партнёров.txt  NEO АБУК часть.txt  NEO ББУК часть.txt
PAM_accaunts/: trade_bd.csv  unsend_symbols.csv
Reports_from_excel_very_important_bot/: helper.ipynb  main.py  requirements.txt
Reports_from_excel_very_important_bot/excel_report_bot/Scripts/: activate
back_test trades ideas/: main.py
backend/bots/Count_statistics_bot/: balance.db  button.py  bybit_balnce.py  dop_file_for_percev.py  dop_zapros.ipynb  finance_report_BOSS.ipynb  main.py  new_sql_qwer_Percev.py
backend/bots/Count_statistics_bot/Fin report fo boss/: dop_file.py  files_for_fin_rep_dop.py
backend/bots/Manger bot for MT5/: SQL_QUERY.py  articls.csv  balanc_quary.py  eqvity.py  help_file.ipynb  main2.py  new_dop_files.py  old_bot.py  realized_pnl.py
backend/bots/Manger bot for MT5/query_new/Балансы и эквити 2 запроса нео эктив/Active/: Active балансы.txt
backend/bots/PAM_accaunts/: U_SYMBOLS_ID.csv  dop.py  main.py
backend/bots/Reports_from_excel_very_important_bot/: quantstats_report.html  strata-Updated (2).xlsx  Балансы Перцев.xlsx
backend/bots/Reports_from_excel_very_important_bot/excel_report_bot/Scripts/: activate.bat  pwiz.py
backend/bots/back_test trades ideas/: EXP сделки до доп проверки.xlsx  auxiliary_files_for_Unity_ideas.py  bot_for_Unity_ideas.py  main.py  process_data.py  right_instumets.json  settings.py  unity.ipynb  Отчет по EXP сделкам.xlsx  Отчет_по_стратегиям_за_29.01.2024.xlsx
backend/bots/check_signals_bot/: chekSignals.ipynb  crate_bd.ipynb  dop_file.py  main.py  zapros_api.ipynb
backend/bots/parsing trade ides from telegram/: IDes for Unity Instruments.csv  parsing_ideas_from_TG.py
backend/connectors/Binance_Connector/: Binance_ws.py  Steven - Ноябрь 25.xlsx  config.py  create_bd.py  helper.ipynb  trdes_Steven_November.xlsx
backend/connectors/OKX_Connector/: OKX_ws.py  config.py  create_bd.py  helper.ipynb  historical_trades.py  main.py  trades.db  utilites.py
backend/signals/Bondash_signals/: check_id.csv  data.csv  id_instruments_prod.csv
check_signals_bot/: dop_file.py  zapros.txt
parsing trade ides from telegram/: find_new_ides.ipynb  helper.ipynb
unity/: restart.bat  start.bat  start.py  stop.bat
(+4 files in other folders)
